# claude-session-init

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  SKILL.md  custom.md  index.html  install.sh  llms-install.md  pyproject.toml
.claude-plugin/: plugin.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
docs/: capability-inventory.md  stripe-setup.md
docs/plans/: 2026-02-17-mcp-first-architecture-design.md  2026-02-18-comprehensive-test-suite.md  2026-02-19-capability-inventory.md
prompts/: capability-inventory-agent.md
scripts/: session-init.py
skills/start/: SKILL.md
skills/stop/: SKILL.md
src/: pyproject.toml
src/atlas_session/: __init__.py  __main__.py  license.py  server.py  stripe_client.py
src/atlas_session/common/: __init__.py  config.py  state.py
src/atlas_session/contract/: __init__.py  atlascoin.py  model.py  tools.py  verifier.py
src/atlas_session/session/: __init__.py  operations.py  tools.py
src/atlas_session/stripe/: __init__.py  tools.py
tests/integration/: test_capability_inventory_flow.py  test_mcp_protocol.py
tests/unit/: test_license.py  test_session_operations.py
